Wed Dec 16 11:52:11 2020  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*.c: fix/ignore all the compiler warnings I can find

	* src/gnome-genius.c: never do this uniquness nonsense so that
	  we don't get into trouble.
	
	* configure.ac: raise version

	* help/C/genius.xml: a few updates

	* help/C/figures/*.png: update images

Tue Dec 15 17:37:06 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: move the solver bits to the expression entries

	* src/gnome-genius.c: fix runtime warning with vte

Tue Oct 27 16:13:55 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Use normal text boxes instead of spin boxes
	  for the range values in the plotting dialog to allow
	  for arbitrary expressions

Tue Oct 27 00:01:47 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/*.[ch], ve/*.c, gtkextra/*.[ch]: Fix bunch of warnings, some of
	  them fixing possible crashes

Mon Oct 26 18:35:24 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: reset minx/maxx for fitted parametric plots

Wed Jun 03 12:58:07 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Port to Native file chooser dialogs, also
	  make save console dialog not fake modal.

Wed Jun 03 11:36:01 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/genius.c: properly create the .genius
	  directory if missing, move gui settings to .genius/config-gui
	  and save config on OK in the setup dialog

Mon Jun 01 15:37:49 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix EOF quit

Thu Mar 05 18:38:24 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix reference to GTK+3 to GTK3

Thu Mar 05 18:31:22 2020  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.25

Sun Mar 01 15:31:07 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix long label in solver

	* src/gnome-genius.c: Add Yavor to the about box.

	* src/calc.h: update copyright string

Sun Feb 16 11:35:46 2020  Jiri (George) Lebl <jirka@5z.com>
