@@ -1,3 +1,8 @@
+Wed Dec 16 13:53:33 2020  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/genius-readline-helper.c: fix warning by using the right list
+	  free function
+
 Wed Dec 16 11:52:11 2020  Jiri (George) Lebl <jirka@5z.com>
 
 	* gtkextra/*.c: fix/ignore all the compiler warnings I can find
